# iov-vehicle-tbox-dte

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: api.md  build-and-verify.md  usage.md
src/dte/: __init__.py  __main__.py  cli.py
src/dte/config/: __init__.py  loader.py  transport_profile.py
src/dte/engine/: __init__.py  assertion.py  executor.py  scenario.py
src/dte/model/: __init__.py  report.py  session.py  test_case.py  test_step.py
src/dte/transport/: __init__.py  base.py  can.py  doip.py  exceptions.py  factory.py
src/dte/uds/: __init__.py  client.py  security.py  services.py
tests/fixtures/test_cases/: aftersales_dtc.yaml  cert_provisioning.yaml  eol_provisioning.yaml
tests/fixtures/transport_profiles/: can_standard.yaml  doip_direct.yaml
tests/integration/: __init__.py  test_aftersales_scenario.py  test_cli.py  test_eol_scenario.py  test_script_execution.py
tests/unit/: test_assertion.py  test_can.py  test_doip.py  test_executor.py  test_loader.py  test_models.py  test_scenario.py  test_security.py  test_transport_profile.py  test_uds_client.py
