[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iov-vehicle-tbox-dte"
version = "0.1.0"
description = "TBOX Diagnostic Tester Emulator for vehicle diagnostics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "udsoncan>=1.20",
    "doipclient>=1.1",
    "python-can>=4.0",
    "can-isotp>=2.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dte"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
